--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
     "nocache": "^2.0.0",
+    "nodemailer": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0"
