--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "test": "mocha"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "connect-mongo": "^2.0.3",
