--- a/server/package.json
+++ b/server/package.json
@@ -6,12 +6,13 @@
     "start": "node ./bin/www",
     "dev": "nodemon ./bin/www",
     "debug": "DEBUG=server:* nodemon ./bin/www",
-    "test": "mocha"
+    "test": "mocha --timeout 3000"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "chai": "^4.2.0",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
