added more tests

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
     "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "connect-mongo": "^2.0.3",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
