--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-typist": "^2.0.5",
     "reactstrap": "^8.0.1"
   },
   "scripts": {
