--- a/server/.vscode/settings.json
+++ b/server/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "workbench.colorCustomizations": {
         "activityBar.background": "#eedf67",
+        "activityBar.activeBorder": "#13ac9b",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
         "activityBarBadge.background": "#13ac9b",
