add ledger function

--- a/client/package.json
+++ b/client/package.json
@@ -11,12 +11,14 @@
     "@nivo/line": "^0.59.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "classnames": "^2.2.6",
     "less": "^3.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
+    "react-select": "^3.0.8",
     "react-typist": "^2.0.5",
     "reactstrap": "^8.0.1",
     "typed.js": "^2.0.11"
