--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,9 @@
     "serve-favicon": "^2.5.0"
   },
   "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.12.1"
   }
 }
