--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.6",
     "less": "^3.9.0",
     "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
@@ -34,6 +35,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {}
+  ]
 }
