--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -12,7 +12,10 @@
         "titleBar.inactiveForeground": "#15202b99",
         "statusBar.background": "#00b3e6",
         "statusBarItem.hoverBackground": "#008bb3",
-        "statusBar.foreground": "#15202b"
+        "statusBar.foreground": "#15202b",
+        "activityBar.activeBackground": "#1accff",
+        "statusBar.border": "#00b3e6",
+        "titleBar.border": "#00b3e6"
     },
     "peacock.color": "#00b3e6"
 }
