--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -13,9 +13,7 @@
         "statusBar.background": "#00b3e6",
         "statusBarItem.hoverBackground": "#008bb3",
         "statusBar.foreground": "#15202b",
-        "activityBar.activeBackground": "#1accff",
-        "statusBar.border": "#00b3e6",
-        "titleBar.border": "#00b3e6"
+        "activityBar.activeBackground": "#1accff"
     },
     "peacock.color": "#00b3e6"
 }
