--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
-    "@nivo/line": "^0.64.0",
+    "@nivo/core": "^0.66.0",
+    "@nivo/line": "^0.66.0",
     "axios": "^0.18.0",
     "bootstrap": "^4.5.3",
     "classnames": "^2.2.6",
