--- a/server/package.json
+++ b/server/package.json
@@ -14,9 +14,10 @@
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "connect-mongo": "^2.0.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
