--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cyberwarfare4k",
   "version": "0.0.1",
-  "description": "Work in progress. including the readme",
+  "description": "Free multiplyer hacker role playing game",
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {},
