--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "cron": "^1.8.2",
     "dotenv": "^6.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.2.3",
     "express-session": "^1.17.1",
     "mongoose": "^5.10.15",
     "morgan": "^1.10.0",
