--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-digital-clock": "^0.1.2",
     "react-dom": "^16.14.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
